fixed a height issue on smaller width devices

--- a/styles/responsiveness.css
+++ b/styles/responsiveness.css
@@ -25,7 +25,24 @@
         height: auto;
         
     }
+    .top::before{
+        content: "";
+        background-image: url("../images/background.jpg");
+       
+        background-position: center;
+        background-repeat: repeat;
+        background-size: cover;
+
+        opacity: 0.5;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        height: 300vh;
+        z-index: -1;
     
+}
     form * {
         margin:9px 5px;
     }
