--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ body{
         left: 0;
         bottom: 0;
         right: 0;
-        height: 300vh;
+        height: 230vh;
         z-index: -1;
     
 }
